# Simple-Note-App

./: .gitattributes  README.md  d
app/src/main/jni/: CMakeLists.txt  NativeMp3Encoder.cpp  cameraManager.cpp  extractor.cpp  extractor.h  httplib.cc  httplib.h  imageReader.cpp  nativelib.cpp  server.cpp  server.cpp~  server.h  shared.cpp  shared.h  utils.cpp  utils.h
app/src/main/jni/lame/: lame.h  machine.h
app/src/main/jni/mbedtls/PaxHeaders.X/: .github_ISSUE_TEMPLATE_config.yml  3rdparty_everest_.gitignore  3rdparty_everest_include_everest_  3rdparty_everest_include_everest_everest.h  3rdparty_everest_include_everest_kremlib_FStar_UInt128.h  3rdparty_everest_include_everest_kremlin_internal_  3rdparty_everest_include_everest_kremlin_internal_types.h  3rdparty_everest_library_  3rdparty_everest_library_Hacl_Curve25519.c  3rdparty_everest_library_Hacl_Curve25519_joined.c  3rdparty_everest_library_kremlib_FStar_UInt64_FStar_UInt32_FStar_UInt16_FStar_UInt8_  3rdparty_everest_library_x25519.c  CONTRIBUTING.md  ChangeLog  ChangeLog.d_00README.md  Makefile  OWNERS  configs_config-no-entropy.h  dco.txt  docs_3.0-migration-guide.md  docs_architecture_Makefile  docs_architecture_mbed-crypto-storage-specification.md  docs_architecture_psa-crypto-implementation-structure.md  docs_architecture_psa-migration_  docs_architecture_psa-migration_strategy.md  docs_architecture_psa-migration_syms.sh  docs_architecture_testing_  docs_architecture_testing_invasive-testing.md  docs_architecture_testing_psa-storage-format-testing.md  docs_architecture_tls13-support.md  docs_getting_started.md  docs_proposed_README  docs_proposed_psa-driver-developer-guide.md  docs_proposed_psa-driver-interface.md  (+515 more)
(+170 files in other folders)
